# openTSNEslim

./: MANIFEST.in  README.rst  azure-pipelines-release.yml  azure-pipelines.yml  pyproject.toml  setup.py
benchmarks/: benchmark.py  benchmark_nns.py  macosko.py
docs/source/: conf.py  installation.rst
docs/source/api/: affinity.rst  callbacks.rst  initialization.rst  sklearn.rst
docs/source/examples/03_preserving_global_structure/: 03_preserving_global_structure.rst
docs/source/examples/04_large_data_sets/: 04_large_data_sets.rst
examples/: 03_preserving_global_structure.ipynb  04_large_data_sets.ipynb  05_animation.ipynb  06_test_outputs.ipynb
examples/docs/: figures.ipynb
examples/figures/: figures_macosko.ipynb
openTSNE/dependencies/annoy/: annoymodule.cc
openTSNEslim/: affinity.py  callbacks.py  inference_io.py  initialization.py  metrics.py  nearest_neighbors.py  sklearn.py  tsne.py
openTSNEslim/_matrix_mul/: matrix_mul_fftw3.pyx  matrix_mul_numpy.pyx
tests/: quad_tree_debug.pyx  test_affinities.py  test_correctness.py  test_different_usages.py  test_import_block_transform.py  test_nearest_neighbors.py  test_sklearn_wrapper.py  test_slim_smoke.py  test_tsne.py  test_utils.py
