[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "openTSNEslim"
version = "0.0.1"
authors = [
  { name="Pavlin PoliÄar", email="pavlin.g.p@gmail.com" },
]
description = "openTSNEslim is a slimmed down version of openTSNE that doesn't require use of scikit-learn or scipy."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pavlin-policar/openTSNE"
Issues = "https://github.com/pavlin-policar/openTSNE/issues"
Homepage_fork = "https://github.com/engagesmarter/openTSNEslim"
Issues_fork = "https://github.com/engagesmarter/openTSNEslim/issues"